# vpMoE

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  README.md  getting_started.md  pyproject.toml  requirements.txt  setup.sh  status.md
configs/: vpdense_28.toml  vpmoe.toml  vpmoe_dev.toml
data/: ffn_calib_prompts.txt  ffn_surgery_ablate.json  readme.md
docker/: Dockerfile  compose.local.example.yml  compose.yml
docs/: architecture.md  current_state.md  data_pipeline.md  distillation_strategy.md  docker.md  eval_suite.md  eval_worklog.md  healing_data.md  hyperparams.md  megatron.md  optimizer_perf.md  overview.md  status.md  upcycle.md  vpmoe_notes.md
scripts/: autotune_microbatch.py  build_image.sh  build_nemotron_math_distill.py  build_oasst2_distill.py  build_opencode_distill.py  build_synth_distill.py  count_distill_tokens.py  diag_inmem_step.py  diagnose_distill_run.py  download_oasst2.py  download_phase1_mix.py  eda_jsonl.py  eda_parquet.py  export_gpt_oss_mxfp4_to_bf16.py  init_vpmoe_from_gpt_oss.py  make_tiny_distill_dataset.py  merge_distill_datasets.py  param_count_megatron.py  print_distill_samples.py  profile.sh  run_local_pretrain.sh  run_phase1_build_4k_665m.sh  run_phase1_merge_8k_665m.sh  run_smoke_and_verify.py  run_te_pretrain.sh  smoke.sh  smoke_healing_text.sh  teacher_probe.py  validate_distill_dataset.py
src/: arcee_experiment.md  architecture.md  data.md  doc.md  open_questions.md  vpmoe_build.md
src/data/: data.md  (+7 more)
tests/: test_mxfp4_export.py
vpmoe/: __init__.py
vr_ablation/: README.md  run_baseline.sh  run_value_residual.sh
(+255 files in other folders)
