[project]
name = "vpmoe"
version = "0.0.0"
description = "vpMoE research and training stack (container-first)."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pytest>=9.0.2",
    "tiktoken>=0.12.0",
    "openai-harmony==0.0.8",
    # Upcycling / tokenizer transplantation (ref/mergekit tokensurgeon).
    "click>=8.2.1",
    "huggingface_hub>=0.20.0",
    "immutables>=0.21",
    "pydantic>=2.10.6",
    "safetensors>=0.5.2",
    "tokenizers>=0.20.1",
    "tqdm>=4.67.1",
    "transformers>=4.45.2",
    "datasets>=4.4.2",
]

[tool.uv]
link-mode = "copy"
